2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c (startup_dump): Fix reversed test

2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Jason L Tibbitts <tibbs@math.uh.edu>
	* server-src/diskfile.c (optionstr): Make sure options string
	  begins with a semicolon

2017-01-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-server-custom-compress-not-found.pl: Call
	  check_amreport with skip_size

2017-01-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/bsdtcp-security.c (bsdtcp_accept): Send early error
	  message to the socket

2017-01-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driverio.h (sched_t): remove nb_flush
	* server-src/driver.c (read_flush): Add a different sched_t for each
	  storage
	* installcheck/success-dumper-chunker+2taper-flush.pl: fix

2017-01-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Parse 'active-storage' setting
	* common-src/conffile.h: Add CNF_ACTIVE_STORAGE
	* server-src/driver.c: Use active-storage
	* man/xml-source/amanda.conf.5.xml: Document active-storage
	* installcheck/Installcheck/Run.pm (is_sort_array): new function
	* installcheck/Makefile.am: Add success-dumper-chunker+2taper-flush
	* installcheck/success-dumper-chunker+2taper-flush.pl: New file

2017-01-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amsamba.pl: Set LC_CTYPE to en_US.UTF-8 before
	  executing smbclient

2017-01-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	By Jose M Calhariz and Jon LaBadie
	* man/xml-source/amanda-auth.7.xml
	* man/xml-source/amanda-changers.7.xml
	* file man/xml-source/amanda-devices.7.xml: Documentation fix

2017-01-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup.c (start_index): Remove unused ptr and
	  bytes_written variables

2017-01-06  Jean-Louis Martineau <JMartineau@carbonite.com>