@@ -1,4 +1,7 @@
 2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* device-src/s3.c: Fix for '/' in prefix, fix for port in S3-HOST
+
+2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* server-src/dumper.c (startup_dump): Fix reversed test
 
 2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
